2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/event/RendererChangeEvent.java
    (seriesVisibilityChanged): New field,
    (RendererChangeEvent(Object)): Delegate to new constructor,
    (RendererChangeEvent(Object, boolean)): New constructor,
    (getSeriesVisibilityChanged): New method.

2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/MouseWheelHandler.java: Implemented Serializable.

2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/FastScatterPlot.java: Implemented Pannable,
    (domainPannable): New field,
    (rangePannable): Likewise,
    (zoomDomainAxes(double, PlotRenderingInfo, Point2D, boolean)): Use new
    resizeRange2() method,
    (zoomRangeAxes(double, PlotRenderingInfo, Point2D, boolean)): Likewise,
    plus use correct mouse coordinate,
    (isDomainPannable): New method,
    (setDomainPannable): Likewise,
    (isRangePannable): Likewise,
    (setRangePannable): Likewise,
    (panDomainAxes): Likewise,
    (panRangeAxes): Likewise,
    (equals): Updated for new fields.

2009-03-25  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/imagemap/ImageMapUtilities.java
    (javascriptEscape): Reimplemented,
    * tests/org/jfree/chart/imagemap/junit/ImageMapPackageTests.java
    (suite): Added new test classes,
    * tests/org/jfree/chart/imagemap/junit/DynamicDriveToolTipTagFragmentGeneratorTests.java:
    New file,
    * tests/org/jfree/chart/imagemap/junit/ImageMapUtilitiesTests.java:
    New file,
    * tests/org/jfree/chart/imagemap/junit/OverLIBToolTipTagFragmentGeneratorTests.java:
    New file.

2009-03-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/entity/AxisEntity.java: New class,
    * source/org/jfree/chart/entity/JFreeChartEntity.java: New class,
    * source/org/jfree/chart/entity/PlotEntity.java: New class,